# mcp-antigravity

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: mcp.json
src/mcp_antigravity/: agy_runner.py  auth_check.py  server.py
tests/: test_agy_runner.py  test_auth_check.py  test_server.py
