[project]
name = "mcp-antigravity"
version = "0.1.0"
description = "An MCP server that proxies requests to the Google Antigravity CLI (agy)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Author", email = "author@example.com" }]
dependencies = [
    "mcp>=1.0.0",
    # On Windows, agy --print writes to the console, not stdout. A pseudo-console
    # (ConPTY) is required to capture its output.
    "pywinpty>=2.0; sys_platform == 'win32'",
]

[project.scripts]
mcp-antigravity = "mcp_antigravity:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
